--- a/styles/sass/partials/_gameBoard.scss
+++ b/styles/sass/partials/_gameBoard.scss
@@ -42,8 +42,8 @@ main {
   flex-direction: column;
   max-width: 1280px;
   width: 80%;
-  max-height: 50vh;
-  min-height: 30vh;
+  max-height: 60vh;
+  min-height: 40vh;
   margin: 0 auto;
   align-items: center;
   padding: 0 0 20px;
@@ -121,6 +121,7 @@ main {
 
 .message {
   visibility: hidden;
+  margin:2px auto;
 }
 .appear {
   visibility: visible;
@@ -183,6 +184,8 @@ main {
   flex-direction: column;
   background-color: rgba($color: #f8f3f8, $alpha: 0);
   z-index: 200;
+  min-height:30vh;
+  max-height:50vh;
 
   form{
     display:flex;
@@ -207,9 +210,11 @@ main {
     cursor: pointer;
     position: relative;
   }
+
   input[type=radio]:checked + label{
     color:$blue;
   }
+
   input[type=radio]:checked + label:before{
     content: "";
     position: absolute;
