--- a/styles/styles.css
+++ b/styles/styles.css
@@ -323,8 +323,8 @@ main {
           flex-direction: column;
   max-width: 1280px;
   width: 80%;
-  max-height: 50vh;
-  min-height: 30vh;
+  max-height: 60vh;
+  min-height: 40vh;
   margin: 0 auto;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -409,6 +409,7 @@ main {
 
 .message {
   visibility: hidden;
+  margin: 2px auto;
 }
 
 .appear {
@@ -478,6 +479,8 @@ main {
           flex-direction: column;
   background-color: rgba(248, 243, 248, 0);
   z-index: 200;
+  min-height: 30vh;
+  max-height: 50vh;
 }
 .startGame form {
   display: -webkit-box;
