--- a/styles/sass/partials/_gameBoard.scss
+++ b/styles/sass/partials/_gameBoard.scss
@@ -45,11 +45,7 @@ main {
   flex-direction: column;
   max-width: 1280px;
   width: 80%;
-<<<<<<< HEAD
-  max-height: 60vh;
-=======
   max-height: 70vh;
->>>>>>> eeeb1bf151e4d492c3500460d34a8a78dfd51008
   min-height: 40vh;
   margin: 0 auto;
   align-items: center;
@@ -133,11 +129,7 @@ main {
 
 .message {
   visibility: hidden;
-<<<<<<< HEAD
-  margin:2px auto;
-=======
   height: 20px;
->>>>>>> eeeb1bf151e4d492c3500460d34a8a78dfd51008
 }
 .appear {
   visibility: visible;
@@ -220,12 +212,8 @@ main {
     font-size: 0.8rem;
   }
 
-  input {
+  input[type="radio"] {
     visibility: hidden;
-
-    &:focus + label {
-      color: red;
-    }
   }
 
   input,
@@ -233,19 +221,10 @@ main {
     cursor: pointer;
     position: relative;
   }
-<<<<<<< HEAD
-
-  input[type=radio]:checked + label{
-    color:$blue;
-  }
-
-  input[type=radio]:checked + label:before{
-=======
   input[type="radio"]:checked + label {
     color: $blue;
   }
   input[type="radio"]:checked + label:before {
->>>>>>> eeeb1bf151e4d492c3500460d34a8a78dfd51008
     content: "";
     position: absolute;
     top: 0;
