--- a/styles/styles.css
+++ b/styles/styles.css
@@ -327,11 +327,7 @@ main {
           flex-direction: column;
   max-width: 1280px;
   width: 80%;
-<<<<<<< HEAD
-  max-height: 60vh;
-=======
   max-height: 70vh;
->>>>>>> eeeb1bf151e4d492c3500460d34a8a78dfd51008
   min-height: 40vh;
   margin: 0 auto;
   -webkit-box-align: center;
@@ -425,11 +421,7 @@ main {
 
 .message {
   visibility: hidden;
-<<<<<<< HEAD
-  margin: 2px auto;
-=======
   height: 20px;
->>>>>>> eeeb1bf151e4d492c3500460d34a8a78dfd51008
 }
 
 .appear {
@@ -526,11 +518,8 @@ main {
 .startGame legend {
   font-size: 0.8rem;
 }
-.startGame input {
+.startGame input[type=radio] {
   visibility: hidden;
-}
-.startGame input:focus + label {
-  color: red;
 }
 .startGame input,
 .startGame label {
