--- a/styles/sass/partials/_gameBoard.scss
+++ b/styles/sass/partials/_gameBoard.scss
@@ -302,6 +302,11 @@ main {
   }
 }
 
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
 //loader
 //Inspired by codepen
 .loader {
