--- a/styles/styles.css
+++ b/styles/styles.css
@@ -591,6 +591,12 @@ main {
   width: 100%;
 }
 
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
 .loader {
   position: relative;
   margin-top: 100px;
