--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -3,17 +3,25 @@ footer {
   width: 100%;
   text-align: center;
   display: flex;
+  flex-direction: column;
   align-items: center;
   position: fixed;
   justify-content: center;
   bottom: 0;
+  z-index: 400;
+
+  .wrapper {
+    padding: 10px 0;
+  }
 
   p {
     font-family: $poppins;
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 10px 0;
+
+    &:not(:last-child) {
+      margin-bottom: 5px;
+    }
   }
-  
 }
