--- a/styles/sass/partials/styles.scss
+++ b/styles/sass/partials/styles.scss
@@ -1,6 +1,5 @@
 @import "./variables";
-@import './setup';
+@import "./setup";
 @import "./typography";
-@import "./header";
 @import "./gameBoard";
 @import "./footer";
