--- a/styles/sass/partials/_gameBoard.scss
+++ b/styles/sass/partials/_gameBoard.scss
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 main {
@@ -20,7 +20,6 @@ main {
   display: flex;
   justify-content: space-evenly;
   background-color: $blue;
-  width: 90%;
   margin: 0 auto;
   color: #f8f3f8;
   border-image: url("../assets/frame.png") 42 round;
@@ -33,10 +32,18 @@ main {
 
 .wrapper {
   max-width: 1280px;
-  width: 50%;
+  width: 30%;
   margin: 0 auto;
 
   @media (max-width: 1000px) {
+    width: 50%;
+  }
+
+  @media (max-width: 760px) {
+    width: 60%;
+  }
+
+  @media (max-width: 500px) {
     width: 90%;
   }
 }
@@ -45,9 +52,8 @@ main {
   display: flex;
   flex-direction: column;
   max-width: 1280px;
-  width: 90%;
   max-height: 70vh;
-  min-height: 40vh;
+  min-height: 400px;
   margin: 0 auto;
   align-items: center;
   justify-content: center;
@@ -294,8 +300,8 @@ main {
 
 .settingsButton {
   position: absolute;
-  bottom: 5px;
-  right: 10px;
+  top: 5px;
+  right: 5px;
   width: 30px;
   cursor: pointer;
   z-index: 300;
@@ -311,7 +317,7 @@ main {
   right: 10px;
 }
 //loader
-//Inspired by codepen
+//Inspired by https://codepen.io/vinztt/pen/XjEyvZ
 .loader {
   position: relative;
   margin-top: 100px;
